--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
         coroutinesVersion = "1.3.0-M2"
         coil_version = "0.11.0"
         gson_version = "2.8.6"
+        nav_version = "2.3.0-beta01"
+
 
     }
     repositories {
@@ -19,6 +21,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
